--- a/config/config.json
+++ b/config/config.json
@@ -2,21 +2,21 @@
   "development": {
     "username": "postgres",
     "password": "root",
-    "database": "music_tour",
+    "database": "tour-db",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
     "password": "root",
-    "database": "music_tour_test",
+    "database": "tour-db_test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
     "username": "postgres",
     "password": "root",
-    "database": "music_tour_prod",
+    "database": "tour-db_prod",
     "host": "127.0.0.1",
     "dialect": "postgres"
   }
